@@ -6,16 +6,21 @@ import lt.techin.eventify.exception.CategoryNotFoundException;
 import lt.techin.eventify.exception.EventNotFoundException;
 import lt.techin.eventify.exception.ForbiddenException;
 import lt.techin.eventify.exception.UsernameNotFoundException;
+import lt.techin.eventify.model.Category;
+import lt.techin.eventify.model.Event;
+import lt.techin.eventify.model.User;
+import lt.techin.eventify.repository.mysql.CategoryRepository;
+import lt.techin.eventify.repository.mysql.EventRepository;
+import lt.techin.eventify.repository.mysql.UserRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import lt.techin.eventify.model.*;
-import lt.techin.eventify.repository.CategoryRepository;
-import lt.techin.eventify.repository.EventRepository;
-import lt.techin.eventify.repository.UserRepository;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.security.Principal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -91,13 +96,41 @@ public class EventService {
 
     return events.stream()
             .map(eventMapper::toEventResponse)
-            .collect(Collectors.toList());
+            .toList();
+  }
+
+  public EventResponse getEventById(long eventId) {
+    Event event = eventRepository.findById(eventId).orElseThrow(()-> new EventNotFoundException("Event with ID " + eventId + " not found"));
+    return eventMapper.toEventResponse(event);
   }
 
   public List<GetEventResponse> getAllEvents() {
     return eventRepository.findAll().stream()
             .map(eventMapper::toGetEventResponse)
-            .collect(Collectors.toList());
+            .toList();
+  }
+
+  public Page<EventResponse> findEventsByFilters(String categoryName, String city, String startDateTime,
+                                                 String endDateTime, String experienceLevel,
+                                                 Integer minAge, Integer maxAge, String searchTerm, Pageable pageable) {
+
+    if (categoryName != null && !categoryName.isEmpty()) {
+      categoryRepository.findByName(categoryName)
+              .orElseThrow(() -> new CategoryNotFoundException("Category '" + categoryName + "' not found"));
+    }
+
+    Page<Event> eventPage = eventRepository.findEventsByFilters(categoryName, city, startDateTime, endDateTime,
+            experienceLevel, minAge, maxAge, searchTerm, pageable);
+
+    List<EventResponse> eventResponses = eventPage.getContent().stream()
+            .map(eventMapper::toEventResponse)
+            .toList();
+
+    return new PageImpl<>(eventResponses, pageable, eventPage.getTotalElements());
+  }
+
+  public Event findById(long id) {
+    return eventRepository.findById(id).orElse(null);
   }
 
   public EventPictureResponse getEventPicture (long eventId) {
